app_nginx/argocd/deploy_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: nginx-app
   app.kubernetes.io/part-of: nginx
 name: nginx-deploy
spec:
 replicas: 2
 selector:
   matchLabels:
     app: nginx-app
 template:
   metadata:
     labels:
       app: nginx-app
   spec:
     containers:
     - image: image-registry.openshift-image-registry.svc:5000/vt121170prj/nginx-app
       imagePullPolicy: Always
       name: nginx-app-cont
       ports:
       - containerPort: 80
         protocol: TCP
       volumeMounts:
       - name: volume-html
         mountPath: /usr/share/nginx/html 
     volumes:
     - name: volume-html
       configMap:
         name: html-config
     serviceAccount: rodacomoroot
     serviceAccountName: rodacomoroot
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  ports:
    - name: nginx-svc-port
      protocol: TCP
      port: 5000
      targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx-app
  name: nginx-route
spec:
  host: nginx-app.apps.ocplab.vtal.intra
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nginx-svc
    weight: 100
  port:
    targetPort: nginx-svc-port
  wildcardPolicy: None
